@@ -38,6 +38,7 @@ Version 3.10 - ?
 	gelex:
 
 	* Made the generated scanners compilable in void-safe mode with ISE 7.3.
+	* Added support for pushing and popping start conditions.
 
 	gelint:
 
